# warp

./: .gitignore  CMakeLists.txt  Dockerfile  ann.hpp  ann_check.cpp  ann_learn.cpp  ann_zparser.cpp  client.cpp  feature.hpp  lex.hpp  nnet.cpp  pack.cpp  pack.hpp  parser.cpp  request.json  server-config.json  server.cpp  timer.hpp  trie.cpp  trie.hpp  warp-bf.spec  zparser.cpp
bindings/go/: main.go
bindings/go/warp/: warp.go
conf/: error.json  request.json  server-config.json
conf/error_models/english/: around.txt  replace.txt
conf/error_models/russian/: around.txt  replace.txt
debian/: changelog  control  copyright  rules  warp-dev.install  warp.install
example/: request.json  server-config.json
include/warp/: alphabet.hpp  database.hpp  distance.hpp  error_check.hpp  feature.hpp  fuzzy.hpp  json.hpp  jsonvalue.hpp  language_model.hpp  letter_error_model.hpp  lex.hpp  lstring.hpp  ngram.hpp  norvig.hpp  pack.hpp  spell.hpp  stem.hpp  substring.hpp  thevoid_stream.hpp  utils.hpp
src/: CMakeLists.txt  detector.cpp  fuzzy_search.cpp  html.cpp  pack.cpp  server.cpp  spell.cpp  stat.cpp  wikipedia.cpp
stem/: CMakeLists.txt
